# smart-tree

./: .gitignore  .gitmodules  Cargo.toml  delete
src/codexist/: Cargo.toml  README.md  default.nix  justfile
src/codexist/ansi-escape/: Cargo.toml  README.md
src/codexist/app-server/: Cargo.toml  README.md
src/codexist/app-server-protocol/: Cargo.toml
src/codexist/app-server-protocol/src/: export.rs
src/codexist/app-server/src/: codex_message_processor.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs
src/codexist/app-server/tests/common/: Cargo.toml  auth_fixtures.rs  lib.rs  mcp_process.rs  rollout.rs
src/codexist/app-server/tests/suite/: auth.rs  codex_message_processor_flow.rs  config.rs  fuzzy_file_search.rs  interrupt.rs  list_resume.rs  login.rs  mod.rs  send_message.rs  set_default_model.rs  user_agent.rs  user_info.rs
src/codexist/app-server/tests/suite/v2/: account.rs  model_list.rs  rate_limits.rs  thread_archive.rs  thread_list.rs  thread_resume.rs  thread_start.rs  turn_interrupt.rs  turn_start.rs
src/codexist/apply-patch/: Cargo.toml
src/codexist/apply-patch/src/: main.rs
src/codexist/arg0/: Cargo.toml
src/codexist/arg0/src/: lib.rs
src/codexist/async-utils/: Cargo.toml
src/codexist/backend-client/: Cargo.toml
src/codexist/backend-client/src/: client.rs  types.rs
src/codexist/chatgpt/: Cargo.toml  README.md
src/codexist/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  get_task.rs
src/codexist/chatgpt/tests/: task_turn_fixture.json
src/codexist/chatgpt/tests/suite/: apply_command_e2e.rs
src/codexist/cli/: Cargo.toml
src/codexist/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  wsl_paths.rs
src/codexist/cli/tests/: mcp_add_remove.rs  mcp_list.rs
src/codexist/cloud-tasks/: Cargo.toml
src/codexist/cloud-tasks-client/: Cargo.toml
src/codexist/cloud-tasks-client/src/: http.rs  lib.rs
src/codexist/cloud-tasks/src/: app.rs  cli.rs  env_detect.rs  lib.rs  new_task.rs  ui.rs  util.rs
src/codexist/cloud-tasks/tests/: env_filter.rs
src/codexist/codex-backend-openapi-models/: Cargo.toml
src/codexist/common/: Cargo.toml  README.md
src/codexist/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  model_presets.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
src/codexist/core/: Cargo.toml  README.md  gpt_5_1_prompt.md  gpt_5_codex_prompt.md
src/codexist/core/src/: apply_patch.rs  auth.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  codex_delegate.rs  compact.rs  custom_prompts.rs  default_client.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  flags.rs  git_info.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  message_history.rs  model_family.rs  model_provider_info.rs  openai_model_info.rs  otel_init.rs  parse_command.rs  project_doc.rs  response_processing.rs  safety.rs  seatbelt.rs  seatbelt_base_policy.sbpl  shell.rs  spawn.rs  truncate.rs  user_instructions.rs  user_shell_command.rs
src/codexist/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs  responses_headers.rs
src/codexist/docs/: codex_mcp_interface.md  protocol_v1.md
src/codexist/exec/: Cargo.toml
src/codexist/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  main.rs
src/codexist/exec/tests/: event_processor_with_json_output.rs
src/codexist/execpolicy/: Cargo.toml  README.md
src/codexist/execpolicy/src/: main.rs
src/codexist/feedback/: Cargo.toml
src/codexist/feedback/src/: lib.rs
src/codexist/file-search/: Cargo.toml  README.md
src/codexist/file-search/src/: main.rs
src/codexist/keyring-store/: Cargo.toml
src/codexist/linux-sandbox/: Cargo.toml  README.md
src/codexist/linux-sandbox/src/: landlock.rs  lib.rs  linux_run_main.rs  main.rs
src/codexist/login/: Cargo.toml
src/codexist/login/src/: device_code_auth.rs  lib.rs  server.rs
src/codexist/mcp-server/: Cargo.toml
src/codexist/mcp-server/src/: codex_tool_config.rs  codex_tool_runner.rs  exec_approval.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  patch_approval.rs
src/codexist/mcp-types/: generate_mcp_types.py
src/codexist/mcp-types/src/: lib.rs
src/codexist/ollama/: Cargo.toml
src/codexist/ollama/src/: client.rs  lib.rs
src/codexist/otel/: Cargo.toml
src/codexist/otel/src/: config.rs  otel_event_manager.rs
src/codexist/process-hardening/: Cargo.toml  README.md
src/codexist/process-hardening/src/: lib.rs
src/codexist/protocol/: Cargo.toml  README.md
src/codexist/protocol/src/: models.rs  plan_tool.rs  protocol.rs
src/codexist/responses-api-proxy/: Cargo.toml  README.md
src/codexist/responses-api-proxy/npm/: README.md  package.json
src/codexist/responses-api-proxy/src/: main.rs
src/codexist/rmcp-client/: Cargo.toml
src/codexist/rmcp-client/src/: auth_status.rs  find_codex_home.rs  lib.rs  logging_client_handler.rs  oauth.rs  perform_oauth_login.rs
src/codexist/rmcp-client/tests/: resources.rs
src/codexist/scripts/: create_github_release  setup-windows.ps1
src/codexist/stdio-to-uds/: Cargo.toml  README.md
src/codexist/stdio-to-uds/src/: main.rs
src/codexist/stdio-to-uds/tests/: stdio_to_uds.rs
src/codexist/tui/: Cargo.toml  styles.md
src/codexist/tui/src/: additional_dirs.rs  app.rs  app_backtrack.rs  app_event.rs  app_event_sender.rs  chatwidget.rs  cli.rs  clipboard_paste.rs  diff_render.rs  exec_command.rs  file_search.rs  frames.rs  get_git_diff.rs  history_cell.rs  lib.rs  main.rs  markdown.rs  pager_overlay.rs  resume_picker.rs  session_log.rs  slash_command.rs  status_indicator_widget.rs  text_formatting.rs  update_action.rs  update_prompt.rs  updates.rs  version.rs
src/codexist/utils/cache/: Cargo.toml
src/codexist/utils/git/: Cargo.toml  README.md
src/codexist/utils/image/: Cargo.toml
src/codexist/utils/image/src/: lib.rs
src/codexist/windows-sandbox-rs/: Cargo.toml  sandbox_smoketests.py
(+214 files in other folders)
