
[workspace]
members = ["expert_prompt_engineer"]
exclude = ["marqant","codexist"]  # Marqant is a git submodule with its own Cargo.toml

[package]
name = "st"
version = "5.5.0"
edition = "2021"
authors = ["8bit-wraith", "Claude", "Omni", "8b-is Team"]
description = "Smart Tree - An intelligent, AI-friendly directory visualization tool"
repository = "https://github.com/8b-is/smart-tree" # Updated repository
license = "MIT"
readme = "README.md"
keywords = ["tree", "directory", "visualization", "ai", "cli"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]

axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap_mangen = "0.2"
anyhow = "1.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde", "clock"] }
flate2 = "1.0"
colored = "2.1"
globset = "0.4"
regex = "1.10"
humansize = "2.1"
rayon = "1.10"
indicatif = "0.17"
hex = "0.4"
sha2 = "0.10.9"
toml = "0.8.23"
dirs = "5.0"
libc = "0.2"
termimad = "0.26.1"
once_cell = "1.19"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
whoami = "1.5"
crc32fast = "1.4"
similar = "2.4"
# Marqant - quantum-compressed markdown format (submodule at ./marqant)
marqant = { path = "marqant" }
bincode = "1.3"
glob = "0.3"
which = "7.0"
shellexpand = "3.1"
terminal_size = "0.3"
fuzzy-matcher = "0.3"
syntect = "5.0"
artem = "2.0"  # image-to-ascii converter

# egui for dashboard
egui = "0.32.2"
eframe = { version = "0.32.2", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = "0.32.2"
winit = "0.30.12"

# Terminal UI dependencies
ratatui = "0.25"
crossterm = "0.27"

# MCP (Model Context Protocol) support
tokio = { version = "1.42", features = ["full"] }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
dashmap = { version = "6.1" }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
serde_yaml = "0.9"

# SSE support
notify = { version = "6.1", features = ["serde"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }


# Git operations using gix (will be g8t in the future!)
gix = { version = "0.73", default-features = false, features = ["blocking-network-client"] }

# Tree-sitter for smart code editing
tree-sitter = "0.25.8"
tree-sitter-language = "0.1.2"
tree-sitter-rust = "0.23.2"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
syn = { version = "2.0.106", features = ["full", "parsing"] }
quote = "1.0"
cc = "1.2.37"
shlex = "1.3.0"
rayon-core = "1.13.0"
aho-corasick = "1.1.3"
thiserror = "2.0.16"
http = "1.3.1"
foldhash = "0.2.0"
indexmap = "2.11.1"
lock_api = "0.4.13"
prodash = "30.0.1"
bstr = "1.12.0"
hyper = "1.7.0"

[[bin]]
name = "mq"
path = "src/bin/mq.rs"

[[bin]]
name = "tree"
path = "src/bin/tree.rs"

[[bin]]
name = "m8"
path = "src/bin/m8.rs"

[[bin]]
name = "import-claude-memories"
path = "src/bin/import_claude_memories.rs"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = ["std"]
std = []
alloc = []
mem8 = []

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[build-dependencies]
foldhash = "0.2.0"
getrandom = "0.3.3"
gix = "0.73"
rc = "0.1.1"
serde = "1.0"
syn = "2.0.106"
tokio = "1.42"
toml_edit = "0.23.4"
