[package]
edition = "2024"
name = "codexist-arg0"
version = { workspace = true }

[lib]
name = "codexist_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codexist-apply-patch = { workspace = true }
codexist-core = { workspace = true }
codexist-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
