[package]
edition = "2024"
name = "codexist-chatgpt"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codexist-common = { workspace = true, features = ["cli"] }
codexist-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
codexist-git = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
