[package]
edition = "2024"
name = "codexist-cloud-tasks"
version = { workspace = true }

[lib]
name = "codexist_cloud_tasks"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
codexist-cloud-tasks-client = { path = "../cloud-tasks-client", features = [
    "mock",
    "online",
] }
codexist-common = { path = "../common", features = ["cli"] }
codexist-core = { path = "../core" }
codexist-login = { path = "../login" }
codexist-tui = { path = "../tui" }
crossterm = { workspace = true, features = ["event-stream"] }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
