[package]
edition = "2024"
name = "codexist-common"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"], optional = true }
codexist-core = { workspace = true }
codexist-protocol = { workspace = true }
codexist-app-server-protocol = { workspace = true }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "serde", "toml"]
elapsed = []
sandbox_summary = []
