[package]
edition.workspace = true
name = "codexist-feedback"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
codexist-protocol = { workspace = true }
sentry = { version = "0.34" }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
