[package]
edition = "2024"
name = "codexist-ollama"
version = { workspace = true }

[lib]
name = "codexist_ollama"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
bytes = { workspace = true }
codexist-core = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
wiremock = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
