[package]
edition = "2024"
name = "codexist-stdio-to-uds"
version = { workspace = true }

[[bin]]
name = "codexist-stdio-to-uds"
path = "src/main.rs"

[lib]
name = "codexist_stdio_to_uds"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
uds_windows = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
